Fix: WACAG contrast issues to page titles

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -63,16 +63,18 @@ h6 {
 
 .pageTitle {
   /* gradient pink to blue text */
-  background-color: red;
+  background-color: #000;
   font-weight: 600;
   /* Create the gradient. */
+  color: #FFF;
   background-image: linear-gradient(
     to right,
-    #d78dd2,
-    #b999ee,
-    #9da5e9,
-    #8fa9f0
+    #f09dea,
+    #c7aef0,
+    #b3b9ed,
+    #9eb4f0
   );
+
 
   /* Set the background size and repeat properties. */
 
@@ -374,6 +376,16 @@ footer a:hover {
 .blog-post-meta {
   font-size: 0.8rem;
   color: #cfd1d1;
+}
+
+/* 
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+---------------------------------------------HOME--@
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+*/
+
+.homeNotesTitle {
+  color: #fff;
 }
 
 /* 
